// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RemoveModal /> > should render 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModalBody>
    <span>
      Are you sure you want to remove 
      <strong>
        Foo
      </strong>
      ?
    </span>
  </RemoveModalBody>
  <ModalFooter>
    <Button
      color="red"
      icon="check"
      onClick={[MockFunction spy]}
    >
      Confirm
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<RemoveModal /> > should render when [show=false] 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction spy]}
  show={false}
  size="sm"
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModalBody>
    <span>
      Are you sure you want to remove 
      <strong>
        Foo
      </strong>
      ?
    </span>
  </RemoveModalBody>
  <ModalFooter>
    <Button
      color="red"
      icon="check"
      onClick={[MockFunction spy]}
    >
      Confirm
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<RemoveModal /> > should render with message 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModalBody>
    Are you sure about this?
  </RemoveModalBody>
  <ModalFooter>
    <Button
      color="red"
      icon="check"
      onClick={[MockFunction spy]}
    >
      Confirm
    </Button>
  </ModalFooter>
</Modal>
`;
